erDiagram
    users {
        int id PK
        varchar name
        varchar username UK
        enum role
        varchar email UK
        timestamp email_verified_at
        varchar password
        json permissions
        varchar remember_token
        datetime created_at
        datetime updated_at
    }

    vendors {
        int id PK
        varchar name
        varchar contact_person
        varchar email
        varchar phone
        text address
        enum category
        varchar payment_terms
        boolean is_active
        enum vendor_type
        int created_by FK
        datetime created_at
        datetime updated_at
    }

    projects {
        int id PK
        varchar project_title
        varchar cer_number
        numeric total_project_cost
        numeric total_contract_cost
        enum project_status
        text description
        enum project_type
        varchar smpo_number
        enum philcom_category
        varchar team
        int created_by FK
        datetime created_at
        datetime updated_at
    }

    purchase_orders {
        int id PK
        varchar po_number UK
        int project_id FK
        int vendor_id FK
        numeric po_amount
        numeric total_invoiced
        numeric total_paid
        numeric outstanding_amount
        datetime financials_updated_at
        enum currency
        enum po_status
        varchar payment_term
        date po_date
        date expected_delivery_date
        text description
        int created_by FK
        int finalized_by FK
        datetime finalized_at
        int closed_by FK
        datetime closed_at
        text closure_remarks
        datetime created_at
        datetime updated_at
    }

    po_line_items {
        int id PK
        int po_id FK
        varchar item_description
        numeric quantity
        numeric unit_price
        numeric total_amount
        varchar unit_of_measure
        datetime created_at
        datetime updated_at
    }

    invoices {
        int id PK
        enum invoice_type
        int purchase_order_id FK
        int vendor_id FK
        int project_id FK
        varchar si_number
        date si_date
        date si_received_at
        enum payment_type
        numeric invoice_amount
        enum currency
        numeric tax_amount
        numeric discount_amount
        numeric net_amount
        varchar terms_of_payment
        varchar other_payment_terms
        enum invoice_status
        date due_date
        text notes
        date files_received_at
        date submitted_at
        varchar submitted_to
        int reviewed_by FK
        datetime reviewed_at
        datetime approved_at
        int created_by FK
        datetime created_at
        datetime updated_at
    }

    check_requisitions {
        int id PK
        varchar requisition_number UK
        enum requisition_status
        numeric php_amount
        date request_date
        varchar payee_name
        text purpose
        varchar po_number
        varchar cer_number
        varchar si_number
        varchar account_charge
        varchar service_line_dist
        text amount_in_words
        varchar requested_by
        varchar reviewed_by
        varchar approved_by
        int generated_by FK
        datetime approved_at
        int processed_by FK
        datetime processed_at
        datetime created_at
        datetime updated_at
    }

    check_requisition_invoices {
        int id PK
        int check_requisition_id FK
        int invoice_id FK
        datetime created_at
        datetime updated_at
    }

    disbursements {
        int id PK
        varchar check_voucher_number UK
        date date_check_scheduled
        date date_check_released_to_vendor
        date date_check_printing
        text remarks
        int created_by FK
        datetime created_at
        datetime updated_at
    }

    check_requisition_disbursement {
        int id PK
        int check_requisition_id FK
        int disbursement_id FK
        datetime created_at
        datetime updated_at
    }

    remarks {
        int id PK
        varchar remarkable_type
        int remarkable_id
        text remark_text
        int created_by FK
        datetime created_at
        datetime updated_at
    }

    files {
        int id PK
        varchar fileable_type
        int fileable_id
        varchar file_name
        varchar file_path
        varchar file_type
        varchar file_category
        varchar file_purpose
        int file_size
        varchar disk
        text description
        boolean is_active
        int version
        int uploaded_by FK
        datetime created_at
        datetime updated_at
    }

    activity_logs {
        int id PK
        varchar loggable_type
        int loggable_id
        varchar action
        json changes
        int user_id FK
        varchar ip_address
        text notes
        datetime created_at
        datetime updated_at
    }

    audit_trails {
        int id PK
        varchar table_name
        int record_id
        enum action
        json changes
        int user_id FK
        datetime performed_at
        varchar ip_address
        text user_agent
    }

    users ||--o{ vendors : created_by
    users ||--o{ projects : created_by
    users ||--o{ purchase_orders : created_by
    users ||--o{ purchase_orders : finalized_by
    users ||--o{ purchase_orders : closed_by
    users ||--o{ invoices : created_by
    users ||--o{ invoices : reviewed_by
    users ||--o{ check_requisitions : generated_by
    users ||--o{ check_requisitions : processed_by
    users ||--o{ disbursements : created_by
    users ||--o{ remarks : created_by
    users ||--o{ files : uploaded_by
    users ||--o{ activity_logs : user_id
    users ||--o{ audit_trails : user_id

    vendors ||--o{ purchase_orders : has
    projects ||--o{ purchase_orders : has
    purchase_orders ||--o{ po_line_items : has
    purchase_orders ||--o{ invoices : "has PO invoices"

    vendors ||--o{ invoices : "has direct invoices"
    projects ||--o{ invoices : "optional direct invoices"

    check_requisitions ||--o{ check_requisition_invoices : links_to
    invoices ||--o{ check_requisition_invoices : linked_by
    
    check_requisitions ||--o{ check_requisition_disbursement : links_to
    disbursements ||--o{ check_requisition_disbursement : linked_by

    remarks }o--o{ vendors : remarkable
    remarks }o--o{ projects : remarkable
    remarks }o--o{ purchase_orders : remarkable
    remarks }o--o{ invoices : remarkable
    remarks }o--o{ check_requisitions : remarkable
    remarks }o--o{ disbursements : remarkable

    files }o--o{ users : fileable
    files }o--o{ vendors : fileable
    files }o--o{ projects : fileable
    files }o--o{ purchase_orders : fileable
    files }o--o{ invoices : fileable
    files }o--o{ check_requisitions : fileable
    files }o--o{ disbursements : fileable

    activity_logs }o--o{ users : loggable
    activity_logs }o--o{ vendors : loggable
    activity_logs }o--o{ projects : loggable
    activity_logs }o--o{ purchase_orders : loggable
    activity_logs }o--o{ invoices : loggable
    activity_logs }o--o{ check_requisitions : loggable
    activity_logs }o--o{ disbursements : loggable
